--- a/.github/workflows/post-commit.yml
+++ b/.github/workflows/post-commit.yml
@@ -13,8 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 name: build-branch
-on:
-  - push
+on: repository_dispatch
+   types:
+      - build
 jobs:
   build:
     name: compile
