--- a/.github/workflows/single-test.yml
+++ b/.github/workflows/single-test.yml
@@ -30,5 +30,5 @@ jobs:
         - uses: actions/upload-artifact@master
           if: always()
           with:
-            name: integration
+            name: it-client
             path: target/integration
