--- a/.github/workflows/single-test.yaml
+++ b/.github/workflows/single-test.yaml
@@ -1,4 +1,4 @@
-name: single-test
+name: test-key-input-stream
 on:
   schedule:
    - cron: '*/30 * * * *'
@@ -12,7 +12,7 @@ jobs:
             ref: master-test
         - uses: ./.github/buildenv
           with:
-             args: ./hadoop-ozone/dev-support/checks/integration.sh -Dtest=TestDataValidateWithUnsafeByteOperations
+             args: ./hadoop-ozone/dev-support/checks/integration.sh -Dtest=TestKeyInputStream
         - uses: actions/upload-artifact@master
           if: always()
           with:
