--- a/.github/workflows/single-test.yaml
+++ b/.github/workflows/single-test.yaml
@@ -1,7 +1,7 @@
 name: testMultiBlockWrites3
 on:
   schedule:
-   - cron: '0 0,12 * * *'
+   - cron: '*/30 * * * *'
 jobs:
   it-client:
     name: it-client
